// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Notification Banner Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 1024,
      }
    }
  >
    <div
      className="css-x3xtxm-NotificationsContainer"
    >
      <div
        className="css-rur5uo-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-c58ujo-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-z7hcm5-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-rur5uo-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-c58ujo-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-z7hcm5-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-rur5uo-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-c58ujo-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-z7hcm5-Icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Inline Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-rur5uo-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-c58ujo-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          />
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-rur5uo-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-c58ujo-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-172bta1-CompactNotification"
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
            <span
              className="css-xvugv-CompactNotification"
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-z7hcm5-Icon"
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-rur5uo-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-c58ujo-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-172bta1-CompactNotification"
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-rur5uo-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-c58ujo-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-xvugv-CompactNotification"
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-z7hcm5-Icon"
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Snackbar Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      className="css-gqyrx6-Snackbar"
    >
      <div
        className="css-zeh2a1-Snackbar"
      >
        <div
          className="css-ik60ew-Snackbar"
        >
          <div
            className="css-1xa25n4-Snackbar"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-c58ujo-Icon"
              />
            </span>
          </div>
          <div
            className="css-1xobime-Snackbar"
          >
            This is the info
          </div>
        </div>
        <span
          className="css-jtflos-Snackbar"
          data-testid="snackbar-close"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-z7hcm5-Icon"
            />
          </span>
        </span>
      </div>
      <div
        className="css-1bbxilo-Snackbar"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra neque nec est porttitor
      </div>
      <div
        className="css-gucdqp-Snackbar"
      >
        <div
          className="css-1rvw1sh-Snackbar"
          data-testid="snackbar-secondary"
        >
          <button
            className="css-yqjplb-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-l730ys-Button"
              >
                Secondary CTA
              </span>
            </span>
          </button>
        </div>
        <div
          className="css-1rvw1sh-Snackbar"
          data-testid="snackbar-primary"
        >
          <button
            className="css-3r514x-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-l730ys-Button"
              >
                Primary CTA
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Toast Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      className="css-3we5al-Toast"
    >
      <div
        className="css-1f9jx92-Toast"
      >
        <div
          className="css-oecirt-Toast"
        >
          <div
            className="css-1pas082-Toast"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-lhv1r1-Icon"
              />
            </span>
          </div>
          <div>
            Informative Message
          </div>
        </div>
        <div
          className="css-gx89q3-Toast"
        >
          <span
            className="css-b2ukb2-Toast"
            data-testid="toast-expand"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-lhv1r1-Icon"
              />
            </span>
          </span>
          <span
            className="css-1ejuyfz-Toast"
            data-testid="toast-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-lhv1r1-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-1f5h93i-Toast"
        data-testid="expanded-container"
      >
        <div
          className="css-q268yq-NotificationVisual"
        >
          <div
            className="css-yc4ml2-NotificationVisual"
          >
            Message heading
          </div>
          <div
            className="css-c03zyy-NotificationVisual"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra neque nec est porttitor
          </div>
          <div
            className="css-8gkyu8-NotificationVisual"
          >
            <div
              className="css-16owih8-NotificationVisual"
              data-testid="visual-secondary"
            >
              <button
                className="css-yqjplb-Button"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="css-1xr6sam-Button"
                >
                  <span
                    className="css-l730ys-Button"
                  >
                    Secondary CTA
                  </span>
                </span>
              </button>
            </div>
            <div
              className="css-16owih8-NotificationVisual"
              data-testid="visual-primary"
            >
              <button
                className="css-3r514x-Button"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="css-1xr6sam-Button"
                >
                  <span
                    className="css-l730ys-Button"
                  >
                    Primary CTA
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;
